--- a/the_spacebar/composer.json
+++ b/the_spacebar/composer.json
@@ -5,11 +5,14 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "4.2.*",
-        "symfony/dotenv": "4.2.*",
+        "sensio/framework-extra-bundle": "^5.5",
+        "sensiolabs/security-checker": "^6.0",
+        "symfony/console": "4.3.5",
+        "symfony/dotenv": "4.3.5",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/framework-bundle": "4.3.5",
+        "symfony/web-server-bundle": "4.3.5",
+        "symfony/yaml": "4.3.5"
     },
     "require-dev": {
     },
@@ -40,7 +43,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -55,7 +59,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.2.*"
+            "require": "4.3.5"
         }
     }
 }
